--- a/Project.ipynb
+++ b/Project.ipynb
@@ -7016,6 +7016,30 @@
     "\n",
     "accuracy_score(y_test, y_pred_KNN)*100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "gnb = GaussianNB()\n",
+    "gnb.fit(x_train, y_train)\n",
+    "y_pred_nav = gnb.predict(x_test)\n",
+    "accuracy_score(y_test, y_pred_nav)*100"
+   ]
   }
  ],
  "metadata": {
